ProdIND/ProdPrograms/force-app/main/default/objects/IHM__c/IHM__c.object-meta.xml
<CustomObject>
    <label>IHM</label>
    <nameField>
        <label>IHM Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IHMs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>