ProdIND/ProdPrograms/force-app/main/default/objects/IHM__c/fields/Additional_IHM_amount_to_be_paid__c.field-meta.xml
<CustomField>
    <fullName>Additional_IHM_amount_to_be_paid__c</fullName>
    <label>Additional IHM amount to be paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>