ProdIND/ProdPrograms/force-app/main/default/objects/IHM__c/fields/Customer_need_to_pay_additional_amount__c.field-meta.xml
<CustomField>
    <fullName>Customer_need_to_pay_additional_amount__c</fullName>
    <description>Does customer need to pay additional amount to dealer ?</description>
    <label>Customer need to pay additional amount?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>