ProdIND/ProdPrograms/force-app/main/default/objects/IHM__c/fields/CVO_Remarks__c.field-meta.xml
<CustomField>
    <fullName>CVO_Remarks__c</fullName>
    <label>Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>