ProdIND/ProdPrograms/force-app/main/default/objects/IHM__c/fields/EMI_amount__c.field-meta.xml
<CustomField>
    <fullName>EMI_amount__c</fullName>
    <label>EMI amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>