ProdIND/ProdPrograms/force-app/main/default/objects/IHM__c/fields/Exshoroom_price__c.field-meta.xml
<CustomField>
    <fullName>Exshoroom_price__c</fullName>
    <label>Ex-shoroom price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>