ProdIND/ProdPrograms/force-app/main/default/objects/IHM__c/fields/Fetch_amount_collected_by_executive__c.field-meta.xml
<CustomField>
    <fullName>Fetch_amount_collected_by_executive__c</fullName>
    <label>Fetch amount collected by executive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>