ProdIND/ProdPrograms/force-app/main/default/objects/IHM__c/fields/Has_customer_opted_for_Advance_EMI__c.field-meta.xml
<CustomField>
    <fullName>Has_customer_opted_for_Advance_EMI__c</fullName>
    <label>Has customer opted for Advance EMI ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>