ProdIND/ProdPrograms/force-app/main/default/objects/IHM__c/fields/IHM_Recovery__c.field-meta.xml
<CustomField>
    <fullName>IHM_Recovery__c</fullName>
    <label>IHM Recovery</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>