ProdIND/ProdPrograms/force-app/main/default/objects/IHM__c/fields/Invoice_price_B__c.field-meta.xml
<CustomField>
    <fullName>Invoice_price_B__c</fullName>
    <label>Invoice price (B)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>