ProdIND/ProdPrograms/force-app/main/default/objects/IHM__c/fields/Is_motor_insurance_funded__c.field-meta.xml
<CustomField>
    <fullName>Is_motor_insurance_funded__c</fullName>
    <label>Is motor insurance funded ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>