ProdIND/ProdPrograms/force-app/main/default/objects/IHM__c/fields/Loan_amt_sanctioned_F_excl_fund_insu__c.field-meta.xml
<CustomField>
    <fullName>Loan_amt_sanctioned_F_excl_fund_insu__c</fullName>
    <description>Loan amount sanctioned (F) - excl. funded insurance</description>
    <inlineHelpText>Loan amount sanctioned (F) - excl. funded insurance</inlineHelpText>
    <label>Loan amt sanctioned (F) - excl fund insu</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>