ProdIND/ProdPrograms/force-app/main/default/objects/IHM__c/fields/Margin_money_to_be_deducted_from_disburs__c.field-meta.xml
<CustomField>
    <fullName>Margin_money_to_be_deducted_from_disburs__c</fullName>
    <description>Total margin money to be deducted from disbursement</description>
    <inlineHelpText>Total margin money to be deducted from disbursement</inlineHelpText>
    <label>Margin money to be deducted from disburs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>