ProdIND/ProdPrograms/force-app/main/default/objects/IHM__c/fields/On_Road_Price__c.field-meta.xml
<CustomField>
    <fullName>On_Road_Price__c</fullName>
    <description>On-Road Price (Ex-showroom + RTO + Motor Insurance + other charges)</description>
    <inlineHelpText>On-Road Price (Ex-showroom + RTO + Motor Insurance + other charges)</inlineHelpText>
    <label>On-Road Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>