ProdIND/ProdPrograms/force-app/main/default/objects/IHM__c/fields/Pay_ins_Due_date_shift_charges__c.field-meta.xml
<CustomField>
    <fullName>Pay_ins_Due_date_shift_charges__c</fullName>
    <label>Pay-ins: Due date shift charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>