ProdIND/ProdPrograms/force-app/main/default/objects/IHM__c/fields/Pay_ins_Trade_certificate_fee__c.field-meta.xml
<CustomField>
    <fullName>Pay_ins_Trade_certificate_fee__c</fullName>
    <label>Pay-ins: Trade certificate fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>