ProdIND/ProdPrograms/force-app/main/default/objects/IHM__c/fields/SA_account_opening_charges__c.field-meta.xml
<CustomField>
    <fullName>SA_account_opening_charges__c</fullName>
    <label>SA account opening charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>