ProdIND/ProdPrograms/force-app/main/default/objects/IHM__c/fields/Select_Yes_if_IHM_details_are_correct__c.field-meta.xml
<CustomField>
    <fullName>Select_Yes_if_IHM_details_are_correct__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Please select Yes, if IHM details are correct</description>
    <inlineHelpText>Please select Yes, if IHM details are correct</inlineHelpText>
    <label>Select Yes, if IHM details are correct</label>
    <type>Checkbox</type>
</CustomField>