ProdIND/ProdPrograms/force-app/main/default/objects/IHM__c/fields/Total_amount_paid_to_bank__c.field-meta.xml
<CustomField>
    <fullName>Total_amount_paid_to_bank__c</fullName>
    <label>Total amount paid to bank (E)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>