ProdIND/ProdPrograms/force-app/main/default/objects/IHM__c/fields/Total_amount_to_be_paid_by_customer_G__c.field-meta.xml
<CustomField>
    <fullName>Total_amount_to_be_paid_by_customer_G__c</fullName>
    <label>Total amount to be paid by customer (G)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>