ProdIND/ProdPrograms/force-app/main/default/objects/IHM__c/fields/Total_charges_O__c.field-meta.xml
<CustomField>
    <fullName>Total_charges_O__c</fullName>
    <label>Total charges (O)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>