ProdIND/ProdPrograms/force-app/main/default/objects/IHM__c/fields/Total_EMI_to_be_considered_for_IHM_I__c.field-meta.xml
<CustomField>
    <fullName>Total_EMI_to_be_considered_for_IHM_I__c</fullName>
    <label>Total EMI to be considered for IHM (I)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>