ProdIND/ProdPrograms/force-app/main/default/objects/IHM__c/fields/Total_IHM_paid_to_dealer_A__c.field-meta.xml
<CustomField>
    <fullName>Total_IHM_paid_to_dealer_A__c</fullName>
    <label>Total IHM paid to dealer (A)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>