ProdIND/ProdPrograms/force-app/main/default/objects/IHM__c/fields/Total_Non_funded_insurance_amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Non_funded_insurance_amount__c</fullName>
    <description>Total Non-funded insurance amount (except Motor) (Y)</description>
    <inlineHelpText>Total Non-funded insurance amount (except Motor) (Y)</inlineHelpText>
    <label>Total Non-funded insurance amount (Y)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>