ProdIND/ProdPrograms/force-app/main/default/objects/IHM__c/fields/Total_Non_funded_insurance_amount_excep__c.field-meta.xml
<CustomField>
    <fullName>Total_Non_funded_insurance_amount_excep__c</fullName>
    <label>Is motor insurance funded ?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>