ProdIND/ProdPrograms/force-app/main/default/objects/IHM__c/fields/Total_nonfunded_insurance_C__c.field-meta.xml
<CustomField>
    <fullName>Total_nonfunded_insurance_C__c</fullName>
    <label>Total non-funded insurance (C)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>