ProdIND/ProdPrograms/force-app/main/default/objects/IHM__c/fields/Total_of_above_Pay_ins_D__c.field-meta.xml
<CustomField>
    <fullName>Total_of_above_Pay_ins_D__c</fullName>
    <label>Total - of above Pay ins (D)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>