ProdIND/ProdPrograms/force-app/main/default/objects/IHM__c/fields/Valuation_Charges_Borne_By__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Charges_Borne_By__c</fullName>
    <label>Valuation Charges Borne By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IBL</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>