ProdIND/ProdPrograms/force-app/main/default/objects/IHM__c/fields/Valuation_charges_D__c.field-meta.xml
<CustomField>
    <fullName>Valuation_charges_D__c</fullName>
    <label>Valuation charges  (D)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>