ProdIND/ProdPrograms/force-app/main/default/objects/IHM__c/fields/Xst_Year_Motor_Insurance_Premium_X__c.field-meta.xml
<CustomField>
    <fullName>Xst_Year_Motor_Insurance_Premium_X__c</fullName>
    <label>1st Year Motor Insurance Premium (X)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>